A beginner in Makefile and its extensions.

--- a/lab01/Makefile
+++ b/lab01/Makefile
@@ -9,5 +9,5 @@ OBJECTS = $(patsubst $(SRCDIR)/%.cpp,$(BUILDDIR)/%.o,$(SOURCES))
 
 INC := -I include -I include/hash -I /usr/local/include
 
-## extendible_hash.o: hash/extendible_hash.cpp include/hash/extendible_hash.h include/page/page.h
-	## $(CC) $(CCFLAGS) -c hash/extendible_hash.cpp
+## config.o: common/config.cpp include/common/config.h 
+	## $(CC) $(CCFLAGS) -c common/config.cpp
