--- a/lab01/Makefile
+++ b/lab01/Makefile
@@ -7,7 +7,7 @@ TARGET :=
 SOURCES = $(wildcard $(SRCDIR)/*.cpp)
 OBJECTS = $(patsubst $(SRCDIR)/%.cpp,$(BUILDDIR)/%.o,$(SOURCES))
 
-INC := -I include -I /usr/local/include
+## INC := -I include -I /usr/local/include
 
 ## $(TARGET): $(OBJECTS)
 	## $(CC) $^ -o $(TARGET) $(LIB)
@@ -17,3 +17,7 @@ INC := -I include -I /usr/local/include
 ## extendible_hash_test.o: extendible_hash_test.cpp extendible_hash.o
 	## $(CC) $(CCFLAGS) -c extendible_hash_test.cpp
 
+## lru_replacer_test.o: lru_replacer_test.cpp lru_replacer.o
+	## $(CC) $(CCFLAGS) -c lru_replacer_test.cpp
+
+## lru_replacer.o:
